public/assets/css/global.css
:root {
	--outer-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
	--outer-shadow-sm: 0 .125rem .25rem rgba(0,0,0,.075);
	--outer-shadow-lg: 0 1rem 3rem rgba(0,0,0,.175);
	--g-red: rgb(255, 59, 48);
	--g-blue: rgb(0, 122, 255);
	--g-green: rgb(52, 199, 89);
	--g-teal: rgb(90, 200, 250);
	--g-light-gray: rgb(250, 250, 250);
	--g-middle-gray: rgb(190, 190, 190);
	--g-dark-gray: rgb(155, 155, 155);
	--border: 1px solid rgba(0,0,0,.125);
	--font-weight-hover: 700;
	--font-weight-focus: 1000;
}

html, body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	font-size: 12px;
}

/* The container of bootsrap popover is main, so define the style here */
.popover {
	max-width: 400px;
}

.card {
	border: 0;
}

